# metis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  _compose.yml  alembic.ini  compose.yml  index.html  langgraph.json  main.py  mkdocs.yml  pyproject.toml  search.html
.junie/: guidelines.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init_metadata.py  0001_initial_with_rls.py
docker/: otel-collector-config.yaml
docker/init/: 010_bootstrap.sql
docs/: frontend_api_spec.md  index.md
frontend_api_spec/: index.html
notebooks/: retrieve.ipynb  retrieve2.ipynb  utils.py
scripts/: docker-entrypoint.sh
search/: search_index.json
src/: main.py
src/agent/: __init__.py  graph.py  nodes.py  schemas.py  state.py  tools.py
src/core/: __init__.py  config.py  db.py  logging.py  observability.py  queue.py  queueing.py  security.py  tenancy.py
src/metadata/: __init__.py  api.py  models.py  schemas.py  service.py  tasks.py
src/utils/: __init__.py  prompt.py  state.py  tools.py  types.py  vstore.py
tests/: conftest.py  test_metadata_service.py
tests/integration_tests/: test_graph.py  test_metadata_manual_update.py  test_metadata_service.py
tests/unit_tests/: test_security.py
